fix languages by wrapping them on smaller screens

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -63,6 +63,8 @@ span {
 }
 
 .skills-static {
+  display: flex;
+  flex-wrap: wrap;
   padding: 20px;
 }
 
